# cncf-landscape-a-to-z

./: .dockerignore  .gitignore  .gitpod.yml  DESIGN.md  Dockerfile  Makefile  README.md  _staging_para.md  benchmark_tracker.py  config.yaml  docker-compose.yml  fix_transform.py  justfile  main.py  package-lock.json  package.json  playwright.config.js  pnpm-lock.yaml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  tasks.py
.Jules/: palette.md
data/: categories.yaml  category_index.yaml  category_item_index.yaml  excluded_items.yaml  stats_by_status.yaml  stats_per_category.yaml  stats_per_category_per_week.yaml  week_00_A.yaml  week_01_B.yaml  week_02_C.yaml  week_03_D.yaml  week_04_E.yaml  week_05_F.yaml  week_06_G.yaml  week_07_H.yaml  week_08_I.yaml  week_09_J.yaml  week_10_K.yaml  week_11_L.yaml  week_12_M.yaml  week_13_N.yaml  week_14_O.yaml  week_15_P.yaml  week_16_Q.yaml  week_17_R.yaml  week_18_S.yaml  week_19_T.yaml  week_20_U.yaml  week_21_V.yaml  week_22_W.yaml  week_23_X.yaml  week_24_Y.yaml  week_25_Z.yaml
docs/: AGENT_WORKFLOW.md  README.md  agentic-workflow.md  architecture.md  etl-pipeline.md  graph-driven-orchestration.md  iteration-and-tokens.md  pipeline.md  token-optimization.md  tracker.md  website-architecture.md
examples/: orchestration_token_aware.py
notebooks/: explore_landscape.ipynb
scripts/: bootstrap-kind.sh  generate_tool_pages.py  list_models.py
src/: __init__.py  cli.py  config.py  extract.py  legacy_main.py  load.py  main.py  processor.py  tasks.py  transform.py  transformer.py
tests/: test_flow.py  (+5 more)
(+1295 files in other folders)
